[gd_scene load_steps=3 format=3 uid="uid://is8h4dvr007i"]

[ext_resource type="Script" uid="uid://cymsg037sjw5o" path="res://menu.gd" id="1_gryuy"]
[ext_resource type="FontFile" uid="uid://dpr4kf3pm2u4p" path="res://PressStart2P-vaV7.ttf" id="1_r18jl"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gryuy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21568628, 0.47843137, 0.52156866, 1)

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.30555555
anchor_top = 0.09104938
anchor_right = 0.6944444
anchor_bottom = 0.18981482
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_r18jl")
theme_override_font_sizes/font_size = 64
text = "Credits"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036458332
anchor_top = 0.2839506
anchor_right = 0.9670139
anchor_bottom = 0.4845679
offset_top = 1.5258789e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_r18jl")
theme_override_font_sizes/font_size = 16
text = "Boss SFX: Deathbygeko on freesound.org
Key sprites: dreammixgames on Itch.io
Fox head: heilsena
Oni head: fikriubai
Ding sfx: moodyfingers on freesound.org



Any other asset not mentioned here has a Creative Commons 0 license"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Buttonback" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 51.0
offset_top = 550.0
offset_right = 283.0
offset_bottom = 590.0
theme_override_fonts/font = ExtResource("1_r18jl")
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="ColorRect/Buttonback" to="." method="_on_buttonback_pressed"]
