[gd_scene load_steps=11 format=3 uid="uid://ce2fquldf267v"]

[ext_resource type="FontFile" uid="uid://dpr4kf3pm2u4p" path="res://PressStart2P-vaV7.ttf" id="1_0fbet"]
[ext_resource type="Script" uid="uid://cymsg037sjw5o" path="res://menu.gd" id="1_62e2m"]
[ext_resource type="AudioStream" uid="uid://ctnr2yik10yms" path="res://341629__aceofspadesproduc100__coin-insert-or-collecting-item.wav" id="2_ee4bf"]
[ext_resource type="Script" uid="uid://bfehsje6auurs" path="res://score_labels.gd" id="3_qtu10"]
[ext_resource type="Texture2D" uid="uid://bo1y403tfj7vh" path="res://Enemies/oni.png" id="5_iy58a"]
[ext_resource type="Texture2D" uid="uid://bwghq0evodm1g" path="res://Enemies/shiba green.png" id="6_6a6wx"]
[ext_resource type="Texture2D" uid="uid://bwhj2gn0lyeha" path="res://Enemies/shiba.png" id="7_sky72"]

[sub_resource type="Animation" id="Animation_6a6wx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shiba:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(441, 180.99998)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShibaGreen:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(709.00006, 181.99998)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Oni:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(575, 181.99998)]
}

[sub_resource type="Animation" id="Animation_iy58a"]
resource_name = "mainmenu"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Oni:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3, 4),
"transitions": PackedFloat32Array(10, 10, 10, 10),
"update": 0,
"values": [Vector2(575, 181.99998), Vector2(575, 181.99998), Vector2(575, 172.346), Vector2(575, 181.99998)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShibaGreen:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 5, 6),
"transitions": PackedFloat32Array(10, 10, 10, 10),
"update": 0,
"values": [Vector2(709.00006, 181.99998), Vector2(709.00006, 181.99998), Vector2(709, 172.346), Vector2(709.00006, 181.99998)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shiba:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(10, 10, 10),
"update": 0,
"values": [Vector2(441, 180.99998), Vector2(441, 172), Vector2(441, 180.99998)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sky72"]
_data = {
&"RESET": SubResource("Animation_6a6wx"),
&"mainmenu": SubResource("Animation_iy58a")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62e2m")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ee4bf")
volume_db = 24.0

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.39215687, 0.49803922, 0.7372549, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -32.0
offset_right = 180.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0fbet")
theme_override_font_sizes/font_size = 32
text = "Insert coin"

[node name="Button3" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0fbet")
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="ScoreLabels" type="CanvasGroup" parent="."]
z_index = 2
position = Vector2(-170, 32)
rotation = -0.18264902

[node name="GameText2" type="Label" parent="ScoreLabels"]
offset_left = -1.1702785
offset_top = 11.841461
offset_right = 779.8297
offset_bottom = 244.84146
theme_override_fonts/font = ExtResource("1_0fbet")
theme_override_font_sizes/font_size = 28
text = "High score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameText" type="Label" parent="ScoreLabels"]
offset_left = -1.1702785
offset_top = 11.841461
offset_right = 779.8297
offset_bottom = 244.84146
theme_override_fonts/font = ExtResource("1_0fbet")
theme_override_font_sizes/font_size = 28
text = "High score: 0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_qtu10")

[node name="GameText3" type="Label" parent="ScoreLabels"]
offset_left = -1.1702785
offset_top = 11.841461
offset_right = 779.8297
offset_bottom = 244.84146
theme_override_fonts/font = ExtResource("1_0fbet")
theme_override_font_sizes/font_size = 28
text = "High score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameText4" type="Label" parent="ScoreLabels"]
offset_left = -1.1702785
offset_top = 11.841461
offset_right = 779.8297
offset_bottom = 244.84146
theme_override_fonts/font = ExtResource("1_0fbet")
theme_override_font_sizes/font_size = 28
text = "High score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameText5" type="Label" parent="ScoreLabels"]
offset_left = -1.1702785
offset_top = 11.841461
offset_right = 779.8297
offset_bottom = 244.84146
theme_override_fonts/font = ExtResource("1_0fbet")
theme_override_font_sizes/font_size = 28
text = "High score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="CanvasGroup" parent="."]

[node name="Oni" type="Sprite2D" parent="Title"]
texture_filter = 1
position = Vector2(575, 181.99998)
scale = Vector2(0.12, 0.12)
texture = ExtResource("5_iy58a")

[node name="ColorRect" type="ColorRect" parent="Title/Oni"]
z_index = -1
offset_left = -241.66666
offset_top = -33.333336
offset_right = -201.66666
offset_bottom = 6.666664
scale = Vector2(12.333294, 3)
color = Color(1, 0.74509805, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ShibaGreen" type="Sprite2D" parent="Title"]
texture_filter = 1
position = Vector2(709.00006, 181.99998)
scale = Vector2(0.12, 0.12)
texture = ExtResource("6_6a6wx")

[node name="Shiba" type="Sprite2D" parent="Title"]
texture_filter = 1
position = Vector2(441, 180.99998)
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_sky72")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
libraries = {
&"": SubResource("AnimationLibrary_sky72")
}

[connection signal="pressed" from="ColorRect/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
